# mallet-lang

./: .gitignore  CODE_OF_CONDUCT.md  README.md  hie.yaml  mallet.cabal
src/: Mallet.hs
src/Mallet/: Core.hs
src/Mallet/Core/: Internal.hs  Parse.hs  Reduce.hs  Term.hs  TermF.hs
test/: Main.hs  MalletTest.hs
test/Mallet/Core/: Gen.hs  ParseSpec.hs  TermSpec.hs
test/MalletTest/: Hspec.hs
test/MalletTest/Core/: Internal.hs  ParseSpec.hs  QuickCheck.hs  TermSpec.hs
