cabal-version: 2.2
name: mallet
version: 0.1.0.0

synopsis: An experimental functional programming language
description:
  Mallet is an experimental functional programming langugage. See the README
  on GitHub at <https://github.com/guhou/mallet-lang#readme> for further
  information.
homepage: https://github.com/guhou/mallet-lang#readme
bug-reports: https://github.com/guhou/mallet-lang/issues

license: GPL-3.0-or-later
license-file: LICENSE.md
author: Angus Houston
maintainer: angus.houston@outlook.com.au
copyright: 2020 Angus Houston

build-type: Simple
extra-source-files:
 CODE_OF_CONDUCT.md
 README.md

source-repository head
  type: git
  location: https://github.com/guhou/mallet-lang

common language
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  other-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    KindSignatures
    OverloadedStrings
    StandaloneDeriving
    TemplateHaskell
    TypeFamilies

common dependencies
  build-depends:
    , base >= 4.7 && < 5
    , bound ^>= 2.0
    , containers ^>= 0.6
    , deepseq ^>= 1.4
    , deriving-compat ^>= 0.5
    , megaparsec ^>= 8.0
    , prettyprinter ^>= 1.6
    , recursion-schemes ^>= 5.1
    , scientific ^>= 0.3
    , text ^>= 1.2
    , unordered-containers ^>= 0.2
    , vector ^>= 0.12

common threaded-rts
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

library
  import: language, dependencies
  hs-source-dirs: src
  exposed-modules:
    Mallet.Core.Term

test-suite mallet-test
  import: language, dependencies, threaded-rts
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Mallet.Core.TermSpec
  build-depends:
    , mallet ^>= 0.1
    , hspec ^>= 2.7
    , hspec-megaparsec ^>= 2.1
  build-tool-depends:
    hspec-discover:hspec-discover ^>= 2.7

